--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "lint": "eslint src --max-warnings=0",
     "prepare": "husky install"
   },
-  "lint-staged": {
-    "src/**/*": [
-      "yarn lint --fix"
-    ],
-    "*.js": "eslint --cache --fix"
-  },
+
+
+  "lint-staged": { "*.{js,css,md,ts,tsx}": [ "prettier --write" ] },
+
   "dependencies": {
     "next": "11.1.2",
     "react": "17.0.2",
