--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "lint-staged": {
     "src/**/*": [
-      "yarn lint --fix", "yarn test --bail"
+      "yarn lint --fix",
+      "yarn test --findRelatedTests --bail"
     ],
     "*.{js,css,md,ts,tsx}": "eslint --cache --fix"
   },
