Adicionado o Styled Component com stilos globais

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,13 @@
   },
   "cSpell.words": [
     "avançado",
+    "Cantarell",
+    "Fira",
+    "Grupo",
+    "Neue",
+    "Powertrend",
+    "Roboto",
+    "Segoe",
     "vercel",
     "Vercel"
   ]
