Criando um Stilo para o boilerplate

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,18 @@
   "cSpell.words": [
     "avançado",
     "Cantarell",
+    "desenvolvedor",
     "Fira",
+    "frente",
     "Grupo",
+    "ilustration",
     "Neue",
+    "powermarketing",
     "Powertrend",
     "Roboto",
     "Segoe",
+    "Somos",
+    "tela",
     "vercel",
     "Vercel"
   ]
